--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Softy Pinko</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/CSS/bootsrap.min.css">
-    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-<link rel="stylesheet" href="/css/animate.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
     <section id="nav-section">
@@ -20,7 +21,7 @@
                 <div class="container fix-top bg-light py-2 px-2 mt-2" style="width: 75%; border-radius: 50px;">
                   <a class="navbar-brand" href="#"><img src="/Image/softylogo.png" alt=""></a>
                   <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span style="border: 3px solid rgb(123, 123, 123);" class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
@@ -54,7 +55,7 @@
                 <!-- <img src="/Image/bgImage.jpg" alt=""> -->
             </div>
             <div class="hero text-light text-center">
-                <h3 class="col-mt-3rem">We provide the best strategy to <br> grow up your <span class="typing-effect"></span></h3>
+                <h3 class="col-mt-3rem">We provide the best strategy to <br> grow up your <span class="text-slider"></span></h3>
                 <p class="mt-5">Softy Pinko is a professional Bootstrap 4.0 theme designed by <br> Template Mo for your company at absolutely free of charge</p>
                 <button class=" discoverbtn border-0 text-light py-2 px-4 mt-4">DISCOVER MORE</button>
             </div>
@@ -64,7 +65,7 @@
         <div class="container">
         <div class=" row justify-content-center align-items-center">
         <div class="mt-5 text-center col-lg-4 col-md-6 col-sm-12">
-                <div class=" mx-auto cardcontainer card shadow-lg p-2 mb-5 bg-white border-0" style="width: 18rem;">
+                <div data-aos="fade-right" class=" mx-auto cardcontainer card shadow-lg p-2 mb-5 bg-white border-0" style="width: 18rem;">
                    <div class="softicons mt-3"><img src="/Image/softyicon1.png" class="card-img-top" alt="..."></div> 
                     <div class="card-body">
                         <h6 class="lead">Mordern Stractegy</h6>
@@ -84,7 +85,7 @@
             </div>
 
             <div class="mt-5 text-center col-lg-4 col-md-6 col-sm-12">
-                <div class="mx-auto cardcontainer card shadow-lg p-2 mb-5 bg-white border-0" style="width: 18rem;">
+                <div data-aos="fade-left" class="mx-auto cardcontainer card shadow-lg p-2 mb-5 bg-white border-0" style="width: 18rem;">
                    <div class="softicons mt-3"><img src="/Image/softyicon1.png" class="card-img-top" alt="..."></div> 
                     <div class="card-body">
                         <h6 class="lead">Mordern Stractegy</h6>
@@ -137,7 +138,7 @@
       </div>
        
 <div class="row justify-content-center align-items-center" style="gap: 10px;">
-  <div id="cardPLane" class="card col-lg-2 col-md-4 col-sm-12 me-2 my-2" style="width: 8rem;">
+  <div id="cardPLane" data-aos="fade-down" class="card col-lg-2 col-md-4 col-sm-12 me-2 my-2" style="width: 8rem;">
     <div class="planeimg">
         <img src="/Image/plane1.png" class="card-img-top mt-3" alt="...">
     </div>
@@ -147,7 +148,7 @@
     </div>
   </div>
 
-  <div id="cardPLane" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
+  <div id="cardPLane" data-aos="fade-down" data-aos-delay="100" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
     <div class="planeimg">
       <img src="/Image/plane1.png" class="card-img-top mt-3" alt="...">
     </div>
@@ -157,7 +158,7 @@
   </div>
 </div>
 
-<div id="cardPLane" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
+<div id="cardPLane" data-aos="fade-down" data-aos-delay="300" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
   <div class="planeimg">
       <img src="/Image/plane1.png" class="card-img-top mt-3" alt="...">
   </div>
@@ -166,7 +167,7 @@
   </div>
 </div>
 
-<div id="cardPLane" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
+<div id="cardPLane" data-aos="fade-down" data-aos-delay="400" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
   <div class="planeimg">
       <img src="/Image/plane1.png" class="card-img-top mt-3" alt="...">
   </div>
@@ -176,7 +177,7 @@
   </div>
 </div>
 
-<div id="cardPLane" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
+<div id="cardPLane" data-aos="fade-down" data-aos-delay="500" class="card col-lg-2 col-md-4 col-sm-12  mx-1 my-2" style="width: 8rem;">
   <div class="planeimg">
       <img src="/Image/plane1.png" class="card-img-top mt-3" alt="...">
   </div>
@@ -185,7 +186,7 @@
   </div>
 </div>
 
-<div id="cardPLane" class="card col-lg-2 col-md-4 col-sm-12 ms-2 my-2" style="width: 8rem;">
+<div id="cardPLane" data-aos="fade-down" data-aos-delay="600" class="card col-lg-2 col-md-4 col-sm-12 ms-2 my-2" style="width: 8rem;">
   <div class="planeimg">
       <img src="/Image/plane1.png" class="card-img-top mt-3" alt="...">
   </div>
@@ -351,7 +352,9 @@
   <div class="row justify-content-center align-items-center">
   <div class="col-lg-4 col-md-6 col-9">
     <div class="card border-0 text-center">
-    <div class="blogImg animate__animated animate__pulse"><img src="/Image/softydownimg1.png" class="card-img-top" alt="..."></div> 
+    <div class="blogImg" id="#zoom">
+      <img src="/Image/softydownimg1.png" class="card-img-top" alt="...">
+    </div> 
       <div class="card-body">
         <h6 class="card-title">Vivamus ac vehicula dui</h6>
         <p class="card-text text-muted my-4" style="font-size: 12px;">Cras aliquet ligula dui, vitae fermentum velit tincidunt id. Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas augue.</p>
@@ -430,17 +433,17 @@
         <hr class="text-light" style="margin: 2rem 0; ">
       </div>
     </div>
-    <P class="text-center text-light" style="font-size: 12px;">COPYRIGHT © 2022 SOFTY PINKO COMPANY - DESIGN: KENSOFT TECHNOLOGIES</P>
+    <P class="text-center text-light" style="font-size: 12px;">COPYRIGHT © 2022 SOFTY PINKO COMPANY - DESIGN: Ken/KENSOFT TECHNOLOGIES</P>
   </div>
 </section>
-<script src="/JS/jquery.js"></script>
-<script src="/JS/jquery.counterup.min.js"></script>
-<script src="/JS/jquery.waypoints.min.js"></script>
+  <script src="/JS/jquery.js"></script>
+  <script src="/JS/jquery.counterup.min.js"></script>
+  <script src="/JS/jquery.waypoints.min.js"></script>
 
-<script src="/JS/typed.js"></script>
+  <script src="/JS/typed.js"></script>
 
- <script src="/JS/bootsrap.min.js"></script>
- <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
- <script src="/JS/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="/JS/bootsrap.min.js"></script>
+  <script src="/JS/main.js"></script>
 </body>
 </html>
